sass changes, nesting, mixins, variables.

--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -3,6 +3,10 @@ $main-brand-color: #54d154;
 
 $secondary-brand-color: #c1c1c1;
 
+$color-footer-bg-dark: #207b20;
+
+$color-btn-main: #3eba3e;
+
 $third-brand-color: #333333;
 
 $black: #000; // DONT DO VARS LIKE THIS
