--- a/src/less/bootstrap.less
+++ b/src/less/bootstrap.less
@@ -56,4 +56,4 @@
 @import "utilities.less";
 @import "responsive-utilities.less";
 @import "theme.less";
-@import "team-footer/team-footer.less";
+// @import "team-footer/team-footer.less";
