--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -16,3 +16,9 @@ $paragraph-small-mg: 10px;
 // http://sass-lang.com/documentation/Sass/Script/Functions.html
 $third-brand-color-darker: darken($third-brand-color, 10);
 $brand-mix-color: $secondary-brand-color + $third-brand-color;
+
+
+// what we do section 
+
+$light: #ffffff; 
+$icons-color: #828181; 
